2012-09-02  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.8.in, aprx.conf.in, aprx-complex.conf.in, aprx-rxigate.conf.in,
	  configure.in:
	    Exterminated all instances of yours truly's own address from
	    the sample configurations, and replaced them with 0000.00N
	    00000.00E coordinate, which aprs.fi treats as invalid.

	* beacon.c:
	    In addition to the long time used qTYPE_LOCALGEN, added on
	    APRSIS beacons also  ",TCPIP*" at the tail of whatever is
	    being sent.  Pete is not happy with q-code alone...

2012-08-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* digipeater.c, interface.c, aprx.h, TODO, aprx-manual.*:
	    Add to APRSIS tx-gated packets optionally different via-path
	    (parameter: msg-path) for message packets, than for any other
	    type packets. For example:  via-path WIDE1-1,  msg-path WIDE2-2
	    (By request of OH3BK.)

	* VERSION:  2.05

	* beacon.c, interface.c:
	    Support beaconin to APRSIS without having any radio interfaces.
	    Make null-device interface and (in special conditions the internal
	    APRSIS interface) beaconable.

	* doc/aprx-manual.*:
	    Fixes on <beacon> explanations.
	    Diagrams on subsystem configuration examples describing message
	    flows.

2012-08-07  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* configure.in, aprsis.c, ROADMAP, doc/aprx-manual.odt:
	    Fix the "pthreads" typo by using correct "pthread" spelling
	    in the documents + "--with-pthreads" option alias in configure.

2012-08-07  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c:
	    Automatically create  igate-group N  values for radio interfaces
	    start from 1, and go onwards. Manually defined values start from
	    one, and it is up to the configuration writers to have a sane
	    upper limit.

	* aprx.c, aprx.h, ttyreader.c, erlang.c, kiss.c:
	    Fixed a) poll of KISS subinterfaces, b) KISS polling time
	    management issues.  The polling does not yet have serial-device