@@ -1,4 +1,5 @@
 etc/
+etc/apparmor.d
 usr/sbin
 usr/share/man/man8
 var/log/aprx
